# OoT_Compressor

./: CMakeLists.txt  compressor.cpp  crc.cpp  decompressor.cpp  findtable.cpp  findtable.h  readwrite.h  rom.cpp  rom.h  tableExtractor.cpp  tables.h  util.h  yaz0.cpp  yaz0.h
